--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fabsanjuan/solar-system.git"
   },
   "devDependencies": {
     "vite": "^5.2.0",
     "vite-plugin-string": "1.2.3"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "three": "^0.163.0"
   }
 }
