--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/fabsanjuan/solar-system.git"
   },
+  "homepage": "https://github.com/fabsanjuan/solar-system",
   "devDependencies": {
     "vite": "^5.2.0",
     "vite-plugin-string": "1.2.3"
